--- a/src/main/StructuralPatternForm.form
+++ b/src/main/StructuralPatternForm.form
@@ -35,7 +35,7 @@
                   <model/>
                 </properties>
               </component>
-              <component id="3811e" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+              <component id="3811e" class="javax.swing.JComboBox" binding="comboBox" default-binding="true">
                 <constraints>
                   <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="0" hsize-policy="5" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
